crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_f_string.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..14,
                value: FString(
                    FStringExpr {
                        range: 0..14,
                        value: FStringValue {
                            inner: Single(
                                FString(
                                    FString {
                                        range: 0..14,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 2..13,
                                                    value: "Hello world",
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ),
                        },
                    },
                ),
            },
        ),
    ],
    [],
)
