crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_generator_comprehension.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    GeneratorExp(
        GeneratorExpExpr {
            range: 0..14,
            elt: Name(
                NameExpr {
                    range: 1..2,
                    id: "x",
                    ctx: Load,
                },
            ),
            generators: [
                Comprehension {
                    range: 3..13,
                    target: Name(
                        NameExpr {
                            range: 7..8,
                            id: "y",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 12..13,
                            id: "z",
                            ctx: Load,
                        },
                    ),
                    ifs: [],
                    is_async: false,
                },
            ],
        },
    ),
    [],
)
