crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_named_expression_generator_comprehension.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    GeneratorExp(
        GeneratorExpExpr {
            range: 0..23,
            elt: NamedExpr(
                NamedExpr {
                    range: 1..11,
                    target: Name(
                        NameExpr {
                            range: 1..2,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    value: BinOp(
                        BinOpExpr {
                            range: 6..11,
                            left: Name(
                                NameExpr {
                                    range: 6..7,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 10..11,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            generators: [
                Comprehension {
                    range: 12..22,
                    target: Name(
                        NameExpr {
                            range: 16..17,
                            id: "y",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 21..22,
                            id: "z",
                            ctx: Load,
                        },
                    ),
                    ifs: [],
                    is_async: false,
                },
            ],
        },
    ),
    [],
)
